# headunit-revived

./: CHANGELOG.md  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_hevc_decoder.cpp  usbhelper.c
app/src/main/java/com/andrerinas/headunitrevived/: App.kt
app/src/main/java/com/andrerinas/headunitrevived/aap/: AapAudio.kt  AapVideo.kt  (+5 more)
app/src/main/res/drawable/: bg.xml  gradient_blue.xml  splash_background.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_about.xml  fragment_home.xml
app/src/main/res/layout-port/: fragment_home.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
(+26 files in other folders)
